app/assets/stylesheets/components/shop.scss
.nd-shop {
  height: calc(100% - #{$header-height});
  color: white;
  min-height: 700px;

  .landing {
    flex-direction: row;
    display: flex;
    align-items: stretch;
    height: 100%;

    &.show-form {
      .landing--right-background,
      .landing--left-background {
        background-color: rgba(12, 12, 12, 0.9);
      }
    }
  }

  .arrow-back {
    display: none;
  }

  .landing--left,
  .landing--right {
    display: flex;
    justify-content: center;
    position: relative;
    flex: 1;
    transition: opacity 250ms linear;
  }

  .story-header,
  .tshirt-header {
    padding-top: 230px;
  }

  .done-with-life {
    z-index: 3;
    text-align: center;
    font-size: 38px;
  }

  .tshirt-images-container {
    position: relative;
    width: 100%;
    height: 100%;
    margin-bottom: -150px;
    max-width: 512px;
    max-height: 516px;
    margin-top: -50px;
  }

  .tshirt-image {
    width: 100%;
    height: auto;
    top: 0;
    left: 0;
  }

  .percentage-bar-image {
    position: absolute;
    width: 100%;
    height: auto;
    top: 0;
    left: 0;
  }

  .tshirt-cta-buttons {
    display: flex;
    width: 100%;
    justify-content: space-around;
    z-index: 2;
  }

  .landing--left-content,
  .landing--right-content {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: start;
    z-index: 2;
    max-width: 100%;
  }

  .landing--right-content {
    position: relative;
  }

  .landing--left-background,
  .landing--right-background {
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    transition: background-color 250ms linear;
  }

  .landing--left-background {
    background-position: 0 40%;
  }

  .landing--right-background {
    background-position: 100% 40%;
  }

  h2 {
    font-family: 'FatFrank', 'Teko', Arial, sans-serif;
    font-size: 59px;
    text-transform: uppercase;
    margin-bottom: 48px;
  }

  p {
    font-size: 30px;
    text-transform: uppercase;
    margin-bottom: 24px;
    text-align: center;
  }

  .shop-cta,
  .facebook-share-button,
  .buy-button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 200px;
    height: 50px;
    text-transform: uppercase;
    color: white;
    font-size: 24px;
  }

  .form-wrapper,
  .tshirt-display-wrapper {
    padding-top: 100px;
    width: 100%;
  }

  .tshirt-display-wrapper {
    display: flex;
    flex-direction: column;
    text-align: center;
  }

  .shop-cta {
    border: 1px solid white;
    background-color: transparent;
  }

  .facebook-share-button {
    border: 1px solid black;
    background-color: #0079c1;
  }

  .buy-button {
    background-color: $yellow-color;
    border: 1px solid black;
  }

  .form {
    justify-content: center;
    align-items: center;
    display: flex;
    color: white;
    flex-direction: column;
    text-align: center;
    padding-bottom: 36px;
  }

  .error-message {
    color: $yellow-color;
  }

  label {
    font-size: 40px;
    line-height: 1;
    margin-bottom: 24px;
    font-family: 'FatFrank', 'Teko', Arial, sans-serif;
    text-transform: uppercase;
  }

  .input-group {
    display: flex;
    flex-direction: column;
    margin-bottom: 48px;
  }

  .multi-select-wrapper {
    display: flex;
    flex-direction: row;
  }

  .multi-select-wrapper,
  .select-wrapper {
    margin-bottom: 12px;
  }

  .form-input {
    width: 200px;
    height: $shop-form-input-height;
    font-family: 'Teko', Arial, sans-serif;
    font-size: 25px;
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 4px;
    padding-bottom: 0;
    border: none;
    border-radius: 0;
    text-align: center;
    text-transform: uppercase;
    background-color: #717171;

    &:focus {
      background-color: white;
    }

    &::-webkit-input-placeholder { /* WebKit, Blink, Edge */
      color: black;
    }
    &:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
      color: black;
      opacity:  1;
    }
    &::-moz-placeholder { /* Mozilla Firefox 19+ */
      color: black;
      opacity:  1;
    }
    &:-ms-input-placeholder { /* Internet Explorer 10-11 */
      color: black;
    }
    &::-ms-input-placeholder { /* Microsoft Edge */
      color: black;
    }
  }

  /* react-select overrides */
  .Select-input > input {
    max-height: 27px;
    max-width: 140px;
  }

  .Select-value,
  .Select-placeholder,
  .Select-value-label {
    color: black !important;
  }

  .Select-value,
  .Select-placeholder {
    padding-top: 6px;
  }

  .Select-option {
    height: $shop-form-input-height;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 25px;

    &.is-selected,
    &.is-focused {
      background-color: #f0f0f0;
    }
  }

  .Select.is-open .Select-control {
    background-color: white !important;
  }

  .Select-menu, .Select-menu-outer {
    border-radius: 0 !important;
  }

  .Select-arrow {
    border-color: black transparent transparent;

    &:hover {
      border-color: white transparent transparent;
    }
  }

  .is-open .Select-arrow,
  .Select-arrow-zone:hover > .Select-arrow {
    border-top-color: white;
  }

  .is-open > .Select-control .Select-arrow {
    border-color: transparent transparent black;
  }

  .Select-clear-zone {
    color: black;

    &:hover {
      color: #D0021B;
    }
  }

  .submit-button {
    background-color: $yellow-color;
    border: 1px solid black;
    width: 200px;
    height: $shop-form-input-height;
    font-family: 'Teko', Arial, sans-serif;
    font-size: 25px;
    text-transform: uppercase;
    padding-top: 5px;
  }

  @media #{$small-only} {
    .landing {
      flex-direction: column;
      height: 100%;
      padding-left: 12px;
      padding-right: 12px;
    }

    .landing--left-background {
      position: fixed;
    }

    .landing--right-background {
      display: none;
    }

    .arrow-back {
      display: block;
      position: absolute;
      top: 58px;
      z-index: 10;
    }

    .arrow-back-img {
      width: 35px;
    }

    .form-wrapper {
      padding-top: 50px;
    }

    .tshirt-display-wrapper {
      padding-top: 48px;
    }

    .story-header {
      padding-top: 50px;
    }

    .tshirt-header {
      padding-top: 0;
    }

    .multi-select-wrapper {
      justify-content: space-around;

      .Select-control {
        width: 110px !important;
      }
    }

    .input-group {
      margin-bottom: 32px;

      &.multi {
        width: 100%;
      }
    }

    .multi-select-wrapper {
      select {
        width: auto !important;
        max-width: 100px !important;
      }
    }
  }

  @media #{$large-up} {
    padding-left: 0;
    padding-right: 0;

    .multi-select-wrapper {
      justify-content: space-between;
      flex-direction: row;
      width: 500px;
    }

    .landing {
      &:not(.show-form) {
        &:hover {
          .landing--left,
          .landing--right {
            opacity: 0.5;
          }
        }
      }
    }

    .landing--left,
    .landing--right {
      &:hover {
        opacity: 1 !important;

        .landing--right-background,
        .landing--left-background {
          background-color: rgba(12, 12, 12, 0.9);
        }
      }
    }
  }
}

